// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multilingual Logo renders a logo component in a multilingual site language root 1`] = `
<img
  alt="Back to homepage"
  className="ui image"
  src="Logo.svg"
  title="Back to homepage"
/>
`;

exports[`Multilingual Logo renders a logo component in a multilingual site root 1`] = `
<a
  className={null}
  href="/en"
  onClick={[Function]}
  target={null}
  title="Plone Site"
>
  <img
    alt="Back to homepage"
    className="ui image"
    src="Logo.svg"
    title="Back to homepage"
  />
</a>
`;

exports[`Multilingual Logo renders a logo component with a custom logo in a non-root url 1`] = `
<img
  alt="Back to homepage"
  className="ui image"
  src="/@@site-logo/logo.cab945d8.svg"
  title="Back to homepage"
/>
`;

exports[`Multilingual Logo renders a logo component with a custom logo in a non-root url with path 1`] = `
<a
  className={null}
  href="/en"
  onClick={[Function]}
  target={null}
  title="English"
>
  <img
    alt="Back to homepage"
    className="ui image"
    src="/@@site-logo/logo.cab945d8.svg"
    title="Back to homepage"
  />
</a>
`;
